--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -2,50 +2,54 @@
 
 html,
 body {
-   margin:0;
-   padding:0;
-   height:100%;
-   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 #container {
-   height: 100%;
-   min-height: 100%;
-   position: relative;
+  height: 100%;
+  min-height: 100%;
+  position: relative;
 }
 
 #body {
-   margin: 20px;
-   min-height: 100%;
+  margin: 20px;
+  min-height: 100%;
 }
 
 #footer {
-   bottom: 0;
-   width: 100%;
-   height: 50px;   /* Height of the footer */
-   text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 50px; /* Height of the footer */
+  text-align: center;
 }
 
 /* Forms */
 
 .form-user {
-   width: 33% !important;
-   margin: 0 auto !important;
-   margin-top: 10% !important;
+  width: 33% !important;
+  margin: 0 auto !important;
+  margin-top: 5% !important;
+}
+
+.primary {
+  background-color: #16bdff !important;
 }
 
 .form-error {
-   color: #E50000 !important;
+  color: #e50000 !important;
 }
 
 /* Flask flashes */
 
 .flash {
-   margin-right: 20px !important;
+  margin-right: 20px !important;
 }
 
 /* Errors */
 
 .error-box {
-   margin-top: 8%;
+  margin-top: 8%;
 }
