--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -2,7 +2,7 @@
 {% import "macros.html" as m %}
 <html lang="en">
 
-<body id="container" style="background-color:#CE9F73">
+<body id="container" style="background-color:#FDBF26">
 	<div id="header">
 		{% block head %}
 		<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
@@ -13,9 +13,11 @@
 		<!-- Semantic Main CSS -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css" />
 		<!-- Semantic Reset CSS -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/components/reset.min.css" />
+		<link rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/components/reset.min.css" />
 		<!-- Semantic Menu CSS -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/components/menu.min.css" />
+		<link rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/components/menu.min.css" />
 		<!-- Main Semantic JS  -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
 		<!-- Custom CSS -->
@@ -23,17 +25,18 @@
 		<!-- Browser tab name -->
 		<title>{{ title }}</title>
 		<!-- Navbar -->
-		<div style="font-size:1.5em;" class="ui attached inverted menu">
+		<div style="font-size:1.5em; background-color: rgb(43, 27, 20)" class="ui attached inverted menu">
 			{{ m.nav_link('index', 'Home') }}
 			{{ m.nav_link('contact', 'Contact') }}
 			<div class="right menu">
 				<!-- User is logged in -->
 				{% if current_user.is_authenticated %}
 				<div class="item">
-					<a class="ui primary button" href="/user/account">{{ current_user.full_name }}</a>
+					<a style="font-size: 1.2em;" class="ui primary button"
+						href="/user/account">{{ current_user.full_name }}</a>
 				</div>
 				<div class="item">
-					<a class="ui default button" href="/user/signout">Sign out</a>
+					<a style="font-size: 1.2em;" class="ui default button" href="/user/signout">Sign out</a>
 				</div>
 				<!-- User is not logged in -->
 				{% else %}
@@ -60,10 +63,12 @@
 	{% endwith %}
 	<div id="body" class="body">
 		<center>
-
-
 			<img src="{{ url_for('static', filename='img/smartDoc.png') }}" width="600" height="350">
-
+			<div class="home_content" style="margin-top: 3%; border-top: 1px solid rgb(255, 211, 99);">
+				<b style="font-size:2em;color:rgb(196, 160, 0);">
+					abcd
+				</b>
+			</div>
 
 
 			<head>
@@ -82,6 +87,10 @@
 						/* Should be removed. Only for demonstration */
 					}
 
+					.logo_img:hover {
+						cursor: pointer;
+					}
+
 					/* Clear floats after the columns */
 					.row:after {
 						content: "";
@@ -92,11 +101,7 @@
 			</head>
 
 			<body>
-
 				{% block content %}{% endblock %}
-
-
-			
 
 				<!-- <div class="row">
 					<div class="column" style="background-color:#FDFDFE;">
@@ -104,19 +109,15 @@
 						<p>• 10 USD per automated diagnosis</p>
 						<p>• Email support</p>
 						<p>• Instant Delivery</p>
-
 						<script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
 							data-key="pk_test_TQmy1LFbeJ6tgZLOdzT4pZRh00mJ3yq97c" data-description="A Flask Charge" data-amount="500"
 							data-email="{{ email }}" data-locale="auto"></script>
-
-
 					</div>
 					<div class="column" style="background-color:rgb(235, 193, 155);">
 						<h2>Premium</h2>
 						<p>• 1000 USD/month, up to 300 diagnoses</p>
 						<p>• 24/7 chat support</p>
 						<p>• Privacy Guaranteed</p>
-
 						<script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
 							data-key="pk_test_TQmy1LFbeJ6tgZLOdzT4pZRh00mJ3yq97c" data-description="A Flask Charge" data-amount="500"
 							data-email="{{ email }}" data-locale="auto"></script>
@@ -128,7 +129,6 @@
 						<p>• 24/7 Phone Support</p>
 						<p>• Custom Tooling</p>
 						<p>• Contact us for a price quote</p>
-
 						<script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
 							data-key="pk_test_TQmy1LFbeJ6tgZLOdzT4pZRh00mJ3yq97c" data-description="A Flask Charge" data-amount="500"
 							data-email="{{ email }}" data-locale="auto"></script>
