--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -4,9 +4,9 @@
 {% macro nav_link(endpoint, text) %}
 	{% if request.endpoint is not none %}
 		{% if request.endpoint.endswith(endpoint) %}
-		    <a class="active teal item" href="{{ url_for(endpoint) }}">{{ text }}</a>
+		    <a style="font-size:1em; background-color: rgb(255, 120, 67);" class="active item" href="{{ url_for(endpoint) }}">{{ text }}</a>
 		{% else %}
-		    <a class="item" href="{{ url_for(endpoint) }}">{{ text }}</a>
+		    <a style="font-size:0.7em;" class="item" href="{{ url_for(endpoint) }}">{{ text }}</a>
 		{% endif %}
 	{% else %}
     	<a class="item" href="{{ url_for(endpoint) }}">{{ text }}</a>
