--- a/app/templates/uploaded.html
+++ b/app/templates/uploaded.html
@@ -1,61 +1,72 @@
 {% extends "layout.html" %}
 
 {% block head %}
-    {{ super() }}
+{{ super() }}
 {% endblock %}
 
 {% block content %}
 
 <!DOCTYPE html>
 <html>
+
 <head>
-	<body>
-	<!-- <img src="{ url_for('static', filename=img/{{file}}) }}" alt="Italian Trulli"> -->
 
-					<!-- {{ predictions }} -->
-					<style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-</style>
-</head>
 <body>
+  <img src="static/images/{{ file }}" width="600px" height="300px">
 
-<h2>Results</h2>
+  <!-- {{ predictions }} -->
+  <style>
+    .home_content {
+      display: none;
+    }
 
-<table>
-  <tr>
-    <th>Disease</th>
-    <th>Percent Likelihood</th>
-  </tr>
-  <tr>
-    <td>Pneumonia</td>
-    <td>98%</td>
-  </tr>
-  <tr>
-    <td>Fibrosis</td>
-    <td>43%</td>
-  </tr>
-</table>
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
 
-</body>
+    td,
+    th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
+  </style>
+  </head>
+
+  <body>
+
+    <h2>Results</h2>
+
+    <table>
+      <tr>
+        <th>Disease</th>
+        <th>Percent Likelihood</th>
+      </tr>
+      <tr>
+        <td>Pneumonia</td>
+        <td>98%</td>
+      </tr>
+      <tr>
+        <td>Fibrosis</td>
+        <td>43%</td>
+      </tr>
+    </table>
+
+  </body>
+
 </html>
-    <title>Index</title>
+<title>Index</title>
 </head>
+
 <body>
 </body>
+
 </html>
 
 
