--- a/app/templates/user/charge.html
+++ b/app/templates/user/charge.html
@@ -1,13 +1,37 @@
 {% extends "layout.html" %}
 {% block content %}
 
- <!-- <center> <h2><font color='white'>Thanks, you paid <strong>$10.00</strong>!</font></h2> -->
-  <h2><font color='white'>Upload your image below</font></h2>
- <!-- <img src="https://www.popsci.com/sites/popsci.com/files/styles/1000_1x_/public/images/2018/08/untitled.png?itok=ualUMeJN&fc=50,50"></center> -->
+<!-- <center> <h2><font color='white'>Thanks, you paid <strong>$10.00</strong>!</font></h2> -->
+<h2>
+      <font color='white'>Upload your image below</font>
+</h2>
+<!-- <img src="https://www.popsci.com/sites/popsci.com/files/styles/1000_1x_/public/images/2018/08/untitled.png?itok=ualUMeJN&fc=50,50"></center> -->
 
-  <form action = "http://localhost:5000/uploaded" method = "POST" 
-         enctype = "multipart/form-data">
-         <input type = "file" name = "file" />
-         <input type = "submit"/>
-      </form>
+<span id="loaded_image"></span>
+<form action="http://localhost:5000/uploaded" style="margin-top:5%;" method="POST" enctype="multipart/form-data">
+      <input class="ui primary button file_input" onchange="handleChange()" type="file" name="file" />
+      <input class="ui primary button" style="font-size: 1.2em;" value="Submit" type="submit" />
+</form>
+
+<style>
+      .home_content {
+            display: none;
+      }
+</style>
+
+<script>
+      function handleChange() {
+            let ele = document.getElementById('loaded_image')
+            let file = document.getElementsByClassName('file_input')[0].files[0].name
+            let img = document.createElement('img')
+            if (ele.innerHTML != '') {
+                  let sel_img = document.getElementsByClassName('selected_image')[0]
+                  ele.removeChild(sel_img)
+            }
+            img.setAttribute('src', `/static/img/${file}`)
+            img.setAttribute('style', 'width:600px;height:350px;')
+            img.setAttribute('class', 'selected_image')
+            ele.appendChild(img)
+      }
+</script>
 {% endblock %}
