--- a/app/templates/user/charge.html
+++ b/app/templates/user/charge.html
@@ -3,7 +3,7 @@
 
 <!-- <center> <h2><font color='white'>Thanks, you paid <strong>$10.00</strong>!</font></h2> -->
 <h2>
-      <font color='white'>Upload your image below</font>
+      <span style="color:'white';">Upload your image below</span>
 </h2>
 <!-- <img src="https://www.popsci.com/sites/popsci.com/files/styles/1000_1x_/public/images/2018/08/untitled.png?itok=ualUMeJN&fc=50,50"></center> -->
 
